--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    ever feel like you cant connect to them unedumacated non farmers. come join us on farmersonly.com
     <img src = "http://cdn.images.express.co.uk/img/dynamic/128/590x/Roger-farmer-cpws-441815.jpg">
   </body> 
 
