--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   </head>
 
   <body>
-    new world order is soon
+    meli17 is not a girl
     
     <br>
-    <iframe width="420" height="315" src="https://www.youtube.com/embed/GRWbIoIR04c" frameborder="0" allowfullscreen></iframe>
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/gqDvLeG1pgU" frameborder="0" allowfullscreen></iframe>
    
     <br>
-    <img src="http://i.imgur.com/GM1lIdE.png">
+    
   </body> 
 
 
