--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <iframe width="420" height="315" src="https://www.youtube.com/embed/gqDvLeG1pgU" frameborder="0" allowfullscreen></iframe>
    
     <br>
-    
+    <img src = "lol_internet.jpg"/>
   </body> 
 
 
