--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 
   <head> 
     <title>newworldorder.com</title>
-
+<style>
+ body {
+  margin = 0;
+  backround = green;
+  color= red;
+  font-family = "Comic Sans MS", sans-serif;
+  
+ }
+  
+  
+  
+</style>
   </head>
 
   <body>
