--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>newworldorder.com</title>
 <style>
  body {
-  margin = 0;
-  backround = green;
-  color= red;
-  font-family = "Comic Sans MS", sans-serif;
+  margin: 0;
+  background: green;
+  color: red;
+  font-family: "Comic Sans MS", sans-serif;
   
  }
   
