--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 
   <head> 
-    <title>farmersonly.com</title>
+    <title>andy.io</title>
 <style>
  body {
   margin: 0;
-  background: green;
-  color: red;
+  background: black;
+  color: blue;
   font-family: "Comic Sans MS", sans-serif;
   font-size: 5em;
   text-align: center;
