--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   background: black;
   color: blue;
   font-family: "Comic Sans MS", sans-serif;
-  font-size: 5em;
   text-align: center;
  }
   
@@ -19,7 +18,7 @@
   </head>
 
   <body>
-    Welcome to anders.io!
+    <h1>Welcome to anders.io!</h1>
     <br>
     
     
