--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <body>
     <h1>Welcome to anders.io!</h1>
     games:
+    <ul>
+      <li><a href= "flappy">flappygame</a></li>
+    </ul>
     
     <br>
     
