--- a/lol/index.html
+++ b/lol/index.html
@@ -1,7 +1,16 @@
 <!doctype html>
 <html>
 <head>
+  <title>lol</title>
+<style>
+body [
+  background: black;
+  ]
+</style>
+
 </head>
+
 <body>
+  <img src/>
 </body>
 <html>
