--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <h1>Welcome to anders.io!</h1>
-    games:
+    STUFF:
     <ul>
       <li><a href="flappy">flappygame</a></li>
     </ul>
