--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 
   <head> 
-    <title>andy.io</title>
+    <title>MEMES</title>
 <style>
  body {
   margin: 0;
-  background: white;
-  color: blue;
+  background: blue;
+  color: black;
   font-family: "Comic Sans MS", sans-serif;
   text-align: center;
  }
