--- a/info/index.html
+++ b/info/index.html
@@ -7,14 +7,13 @@
 </head>
 <body>
 <h1>hello, if you have come accross this website you are either one of my freinds or a scary old man on the internet .__. ...
-
-enjoy!!!!
-
-
-
+enjoy and check out my code on https://github.com/andersconn
+<br>  
+  
 
 
 
+</br>
 ._.
 
 </h1>
