--- a/info/index.html
+++ b/info/index.html
@@ -6,8 +6,7 @@
 </style>
 </head>
 <body>
-<h1>hello, if you have come accross this website you are either one of my freinds or a scary old man on the internet .__.      ...
-enjoy and check out my code on https://github.com/andersconn
+<h1>YOU SUCK TOES?
 <br>  
   
 
