--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
   <head> 
-    <title>Hello There</title>
+    <title>HELLO CHILDREN</title>
 <style>
  body {
   margin: 0;
-  background: blue;
+  background: green;
   color: black;
   font-family: "Comic Sans MS", sans-serif;
   text-align: center;
