--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <h1>Welcome to anders.io!</h1>
+    <h1>Greetings</h1>
     STUFF:
     <ul>
       <li><a href="flappy">flappygame</a></li>
