--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
  body {
   margin: 0;
-  background="sloth.png";
+  background: green;
   color: black;
   font-family: "Comic Sans MS", sans-serif;
   text-align: center;
